[package]
name = "hierarchy-free-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
rayon = "1.8.0"
valley-free = {git = "https://github.com/guissalustiano/valley-free", branch = "fix/provider_direction_order"}
