[package]
name = "hierarchy-free-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
once_cell = "1.19.0"
petgraph = "0.6.4"
rayon = "1.8.0"
valley-free-graph = {path = "../valley-free-graph"}
